--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,3 +3,7 @@
 django==3.2.11  # pyup: < 4.0  # https://www.djangoproject.com/
 # Django REST Framework
 djangorestframework==3.13.1  # https://github.com/encode/django-rest-framework
+django-cors-headers==3.10.1 # https://github.com/adamchainz/django-cors-headers
+
+# Python-PostgreSQL Database Adapter
+psycopg2==2.9.3  # https://github.com/psycopg/psycopg2
