--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ ARG PYTHON_VERSION=3.9-slim-bullseye
 # define an alias for the specfic python version used in this file.
 FROM python:${PYTHON_VERSION}
 
+ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED 1
 
 ARG APP_HOME=/app
