--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,4 @@
-ARG PYTHON_VERSION=3.9-slim-bullseye
-
-# define an alias for the specfic python version used in this file.
-FROM python:${PYTHON_VERSION}
+FROM python:3.9
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED 1
@@ -9,7 +6,6 @@ ENV PYTHONUNBUFFERED 1
 ARG APP_HOME=/app
 
 WORKDIR ${APP_HOME}
-
 
 # Requirements are installed here to ensure they will be cached.
 COPY requirements.txt ${APP_HOME}/requirements.txt
