--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,4 +6,4 @@ djangorestframework==3.13.1  # https://github.com/encode/django-rest-framework
 django-cors-headers==3.10.1 # https://github.com/adamchainz/django-cors-headers
 
 # Python-PostgreSQL Database Adapter
-psycopg2==2.9.3  # https://github.com/psycopg/psycopg2
+psycopg2-binary==2.9.3  # https://github.com/psycopg/psycopg2
