--- a/server/pytest.ini
+++ b/server/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 addopts = --ds=server.settings --reuse-db
-python_files = tests.py test_*.py
+python_files = tests.py test_*.py *_tests.py
