--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -24,3 +24,9 @@ django-debug-toolbar==3.2.4  # https://github.com/jazzband/django-debug-toolbar
 django-extensions==3.1.5  # https://github.com/django-extensions/django-extensions
 django-coverage-plugin==2.0.2  # https://github.com/nedbat/django_coverage_plugin
 pytest-django==4.5.2  # https://github.com/pytest-dev/pytest-django
+
+# Debbuging
+# ------------------------------------------------------------------------------
+Werkzeug==2.0.2 # https://github.com/pallets/werkzeug
+ipdb==0.13.9  # https://github.com/gotcha/ipdb
+watchgod==0.7  # https://github.com/samuelcolvin/watchgod
