reorder dockerfile npm install & proxy

--- a/client/web-app/Dockerfile
+++ b/client/web-app/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:16.13-slim
+# FROM node:8.7.0-alpine
 
 ARG WEB_APP_HOME=/webapp
 
@@ -7,17 +8,7 @@ WORKDIR ${WEB_APP_HOME}
 # Packages are installed here to ensure they will be cached.
 COPY ./package.json ./
 
-# COPY ./package-lock.json ./
-
-# RUN npm config rm proxy
-# RUN npm config rm https-proxy
-
-# RUN npm config set registry https://registry.npmjs.org/
-
-# RUN npm config set proxy http://server:8000
-
-# RUN npm config set https-proxy http://server:8000
-
+COPY ./package-lock.json ./
 
 RUN npm install
 
@@ -27,6 +18,9 @@ COPY . .
 
 EXPOSE 3000
 
-RUN npm config set proxy http://server:8000
+# RUN npm config rm proxy
+# RUN npm config rm https-proxy
+# RUN npm config set registry https://registry.npmjs.org/
+# RUN npm config set proxy http://server:8000
 
 CMD ["npm", "start"]
