--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ./client/web-app/public:/webapp/public
       - ./client/web-app/README.md:/webapp/README.md
       - ./client/web-app/package.json:/webapp/package.json
-      - ./client/web-app/package-lock.json:/webapp/package-lock.json
+      # - ./client/web-app/package-lock.json:/webapp/package-lock.json
     ports:
       - "3000:3000"
 
