--- a/client/web-app/package.json
+++ b/client/web-app/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^2.0.1"
+    "@types/react-router-dom": "^5.3.2",
+    "http-proxy-middleware": "^2.0.1",
+    "react-router-dom": "^6.2.1"
   }
 }
