--- a/client/web-app/package.json
+++ b/client/web-app/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "http-proxy-middleware": "^2.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
